区分Master Node和Data Node

--- a/ambari-elasticsearch/common-services/package/templates/elasticsearch4master_node.yml.j2
+++ b/ambari-elasticsearch/common-services/package/templates/elasticsearch4master_node.yml.j2
@@ -22,7 +22,7 @@ node.name: {{hostname}}
 node.attr.rack: {{node_attr_rack}}
 
 node.master: true
-node.data: true
+node.data: false
 node.ingest: true
 
 # ----------------------------------- Paths ------------------------------------
