开启跨域支持

--- a/ambari-elasticsearch/common-services/package/templates/elasticsearch4master_node.yml.j2
+++ b/ambari-elasticsearch/common-services/package/templates/elasticsearch4master_node.yml.j2
@@ -68,3 +68,12 @@ action.destructive_requires_name: {{action_destructive_requires_name}}
 # Disabling security
 xpack.security.enabled: {{xpack_security_enabled}}
 
+
+#开启跨域访问支持，默认为false
+
+http.cors.enabled: true
+
+#跨域访问允许的域名地址，(允许所有域名)以上使用正则
+
+http.cors.allow-origin: /.*/
+
